tests/invalid/cyclic_bring1.w
bring "./cyclic_bring2.w" as foo;
